...
class DatosDemo {
  /// Se encarga de llenar la base de datos con datos de demostración
  /// para un negocio de Abarrotes. Estos datos demo sirven para los screenshots
  /// de las tiendas de apps, pruebas, entre otros.
  Future<void> insertarDatosDemoAbarrotes() async {
    // TODO: Crear unidades de medida demo
    //var unidadPieza = UnidadDeMedida.crear(nombre: 'Pieza', abreviacion: 'pza');
    final unidades = await ModuloProductos.repositorioConsultaProductos()
        .obtenerUnidadesDeMedida();

    await _crearImpuestos();
    await _crearCategorias();
    await _crearProductosPorPieza(unidades.first);
...
