...
                        margin: const EdgeInsets.fromLTRB(3, 10, 5, 10),
                        height: 60,
                        child: PrimaryButton(
                            'Cobrar \$${saleTotal.toStringAsFixed(2)}',
                            Icons.attach_money_outlined,
                            chargeButtonClick,
                            key: const ValueKey('payButton')),
                      )
                    ],
                  ),
                )
              ],
            ),
...
              child: Container(
                decoration: BoxDecoration(
                  color: TailwindColors.blueGray[200], //ui.neutral300,
                  borderRadius: BorderRadius.circular(5),
                ),
                child: TextField(
                  key: const ValueKey('skuField'),
                  obscureText: false,
                  autofocus: true,
                  focusNode: myFocusNode,
                  controller: myController,
                  onSubmitted: addItemBySku,
                  autocorrect: false,
...
